src/basic.jj
PARSER_BEGIN(Gramm)

import java.io.*;

public class Gramm {
    public static void main(String[] args) throws ParseException {
        Gramm parser = new Gramm(System.in);
        parser.program();
    }
}

PARSER_END(Gramm)

// Definindo Tokens
TOKEN : {
    < PRINT: "print" >
|   < FUNCTION: "function" >
|   < LETTER: ["a"-"z", "A"-"Z"] >
|   < DIGIT: ["0"-"9"] >
|   < IDENTIFIER: <LETTER> (<LETTER> | <DIGIT>) * >
|   < NUMBER: (<DIGIT>)+ >
|   < COMMA: "," >
|   < LPAREN: "(" >
|   < RPAREN: ")" >
|   < LBRACE: "{" >
|   < RBRACE: "}" >
|   < SEMICOLON: ";" >
} 

// Definindo a Regra de Parsing
void program() :
{}
{
    <FUNCTION> <IDENTIFIER> <LPAREN> <RPAREN> <LBRACE> statements() <RBRACE>
}

void statements() :
{}
{
    statement() ( <SEMICOLON> statement() )*
}

void statement() :
{}
{
    <PRINT> <LPAREN> <IDENTIFIER> <RPAREN>
}
